test/fail/PatternSynonymNoParse.agda
module PatternSynonymNoParse where

pattern f x = a b
